added new features

--- a/src/Components/Rating/Rating.module.scss
+++ b/src/Components/Rating/Rating.module.scss
@@ -17,3 +17,18 @@
     cursor: default;
   }
 }
+.small {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 5px;
+  svg {
+    height: rem(10);
+    width: rem(10);
+    opacity: 1;
+    fill: gold;
+  }
+  &:hover svg {
+    cursor: default;
+  }
+}
