--- a/src/Components/IMG/IMG.module.scss
+++ b/src/Components/IMG/IMG.module.scss
@@ -60,3 +60,10 @@
     object-position: 50% 60%;
   }
 }
+@media only screen and (max-width: 950px) {
+  .big {
+    min-width: 90vw;
+    height: 50vw;
+    object-fit: cover;
+  }
+}
