--- a/src/Components/Sizes/Sizes.module.scss
+++ b/src/Components/Sizes/Sizes.module.scss
@@ -3,23 +3,29 @@
 
 .sizes {
   display: flex;
-  gap: 15px;
+  gap: 5px;
+}
+.size {
+  position: relative;
+  background-color: $color_darken_orange;
+  margin-top: 35px;
+  height: rem(30);
+  min-width: rem(85);
+  line-height: rem(30);
+  text-align: center;
 
-  span {
-    position: relative;
-    background-color: $color_darken_orange;
-    margin-top: 35px;
-    height: rem(30);
-    min-width: rem(70);
-    line-height: rem(30);
-    text-align: center;
-
-    border-radius: 5px;
-    &:hover {
-      cursor: pointer;
-    }
+  border-radius: 5px;
+  &:hover {
+    cursor: pointer;
   }
 }
+.actual_price {
+  font-size: 14px;
+  text-decoration: line-through;
+  color: $color_darken_red;
+  margin-right: 5px;
+}
+
 .price {
   position: absolute;
   display: flex;
@@ -29,20 +35,21 @@
   height: 30px;
   top: -130%;
 
+  font-size: 14px;
+
   text-align: center;
   line-height: 30px;
   background-color: $color_light_orange;
-  border-left: 5px solid $color_darken_orange;
 
-  border-radius: 0 10px 10px 0;
+  border-radius: 10px;
   &_tick {
     position: absolute;
-    bottom: -50%;
-    left: -20%;
-    width: 18px;
-    height: 18px;
+    bottom: -40%;
+
+    width: 15px;
+    height: 15px;
     border-radius: 50%;
-    border: 5px solid $color_light_whiteHeader;
+    border: 3px solid $color_light_whiteHeader;
 
     background-color: $color_darken_red;
     transform: rotate(45deg);
