--- a/src/Components/SingleProduct/SingleProduct.module.scss
+++ b/src/Components/SingleProduct/SingleProduct.module.scss
@@ -43,6 +43,18 @@
 @media only screen and (max-width: 950px) {
   .product_container {
     flex-direction: column;
+    .btns {
+      gap: 5px;
+      position: fixed;
+      bottom: 20px;
+      z-index: 3;
+      background-color: rgba($color: #bc7503, $alpha: 0.4);
+      height: 50px;
+      align-items: center;
+      button {
+        background-color: $color_darken_orange;
+      }
+    }
   }
 }
 @media only screen and (max-width: 400px) {
@@ -50,5 +62,6 @@
     position: relative;
     top: 0;
     left: 0;
+    margin-bottom: 30px;
   }
 }
