--- a/src/Components/Ingredients/Ingredients.module.scss
+++ b/src/Components/Ingredients/Ingredients.module.scss
@@ -35,6 +35,26 @@
   padding: 10px 30px;
   border-bottom: 1px solid $color_darken_brown;
 }
+.excluded {
+  text-decoration: line-through;
+  font-size: 12px;
+  color: $color_darken_red;
+  &::before {
+    content: "-";
+    position: absolute;
+    left: 15px;
+    width: 15px;
+    height: 15px;
+    line-height: 15px;
+    font-size: 14px;
+    font-weight: bold;
+    background-color: $color_darken_red;
+    color: white;
+    border-radius: 50%;
+    text-decoration: none;
+    text-align: center;
+  }
+}
 
 @media only screen and (max-width: 480px) {
   .clips_bot {
