--- a/src/Components/Rating/Rating.module.scss
+++ b/src/Components/Rating/Rating.module.scss
@@ -2,10 +2,12 @@
 @import "../../Style/mixins.scss";
 
 .rating {
+  position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 5px;
+  z-index: 1;
 
   svg {
     height: rem(15);
@@ -18,8 +20,9 @@
   }
 }
 .small {
+  position: relative;
   display: flex;
-  justify-content: center;
+  justify-content: flex-start;
   align-items: center;
   gap: 5px;
   svg {
@@ -30,5 +33,23 @@
   }
   &:hover svg {
     cursor: default;
+  }
+}
+.cover {
+  position: absolute;
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 5px;
+  width: 100%;
+  height: 100%;
+  z-index: -1;
+
+  svg {
+    opacity: 0.7;
+    transform: scale(1.3);
+    height: rem(15);
+    width: rem(15);
+    fill: $color_darken_brown;
   }
 }
