--- a/src/Components/AddFovourite/AddFavourite.module.scss
+++ b/src/Components/AddFovourite/AddFavourite.module.scss
@@ -5,18 +5,27 @@
   width: 100%;
   display: flex;
   flex-direction: column;
-  justify-content: center;
   align-items: center;
   gap: 10px;
   flex: 1;
 
-  h3 {
-    font-size: rem(24);
-    margin-bottom: 10px;
-  }
+  .wrapper {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+    flex: 1 0 auto;
+    h3 {
+      font-size: rem(24);
+    }
+    svg {
+      fill: $color_darken_red;
 
-  svg {
-    fill: $color_darken_red;
+      &:hover {
+        cursor: default;
+      }
+    }
   }
 }
 .special_excluded {
