--- a/src/Components/Cart_Item/CartItem.module.scss
+++ b/src/Components/Cart_Item/CartItem.module.scss
@@ -3,7 +3,8 @@
 
 .cart_item {
   display: flex;
-  min-width: 50%;
+  justify-content: space-between;
+  min-width: 60%;
 
   padding: 10px;
   background-color: $color_light_whiteHeader;
@@ -14,37 +15,69 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    flex: 2;
+
+    width: 250px;
 
     &_title {
+      display: flex;
+      flex-direction: column;
+
       width: 100%;
+      span {
+        margin-bottom: 10px;
+      }
+      .discount {
+        font-size: 14px;
+        color: $color_darken_red;
+        text-decoration: line-through;
+      }
     }
   }
 
   &_setting {
-    min-width: 250px;
-
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 10px;
-    flex: 1;
+
+    width: 180px;
 
     strong {
       text-align: center;
       min-width: 40px;
     }
   }
-  @media only screen and (max-width: 600px) {
+  .cart_item_specialOreder {
+    min-width: 150px;
+    margin: 5px;
+    padding: 5px;
+    display: flex;
     flex-direction: column;
+    gap: 5px;
+
+    font-weight: bold;
+
+    span {
+      font-size: 12px;
+      text-decoration: line-through;
+      color: $color_darken_red;
+    }
+  }
+
+  @media only screen and (max-width: 680px) {
+    flex-direction: column;
+    min-width: 95%;
 
     &_description {
-      width: 100%;
-      justify-content: space-around;
       align-items: center;
     }
+    .cart_item_specialOreder {
+      margin-left: 120px;
+    }
     &_setting {
-      margin: 5px 5px;
+      width: 100%;
+      justify-content: center;
+      align-items: center;
     }
   }
 }
