--- a/src/Components/CustomModal/CustomModal.module.scss
+++ b/src/Components/CustomModal/CustomModal.module.scss
@@ -1,76 +1,74 @@
 @import "../../Style/variables.scss";
 @import "../../Style/mixins.scss";
 
-.modal_bg {
-  position: absolute;
-  background-color: rgba($color: #bc7503, $alpha: 0.4);
-  top: 0;
-  bottom: 0;
-  right: 0;
-  left: 0;
+.modal_active {
+  @include modal;
+
+  opacity: 1;
   z-index: 10;
 
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  border-radius: 10px;
+  animation: fadeIn 0.3s linear;
+  @keyframes fadeIn {
+    0% {
+      opacity: 0;
+    }
+
+    100% {
+      opacity: 1;
+    }
+  }
+}
+.modal_closed {
+  @include modal;
+
+  opacity: 0;
+  z-index: -5;
+
+  animation: fadeOut 0.3s linear;
+  @keyframes fadeOut {
+    0% {
+      opacity: 1;
+    }
+
+    100% {
+      opacity: 0;
+    }
+  }
 }
 
-.modal_content {
-  position: relative;
-  padding: 20px;
-  width: 70%;
-  height: 80%;
+.content_active {
+  @include modal-content;
 
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-
-  box-shadow: $boxshadow_big;
-  border-radius: 20px;
-  background: radial-gradient($color_light_orange, $color_EX_darken_orange);
+  z-index: 20;
   animation: fade-in 0.3s linear;
   @keyframes fade-in {
     0% {
-      transform: scale(0.2);
+      transform: scale(0);
     }
 
     100% {
       transform: scale(1);
     }
   }
-  .modal_close {
-    position: relative;
-    padding: 20px;
-    width: 70%;
-    height: 80%;
-
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-
-    box-shadow: $boxshadow_big;
-    border-radius: 20px;
-    background: radial-gradient($color_light_orange, $color_EX_darken_orange);
-    animation: fade-out 0.3s linear;
-    @keyframes fade-out {
-      0% {
-        transform: scale(1);
-      }
-
-      100% {
-        transform: scale(0.2);
-      }
-    }
-  }
 
   @media only screen and (max-width: 950px) {
-    width: 95%;
+    width: 90%;
   }
 }
+.content_closed {
+  @include modal-content;
 
+  animation: fade-out 0.3s linear;
+  @keyframes fade-out {
+    0% {
+      transform: scale(1);
+    }
+
+    100% {
+      transform: scale(0);
+    }
+  }
+}
 .dismiss {
   position: absolute;
   top: 20px;
