--- a/src/Style/mixins.scss
+++ b/src/Style/mixins.scss
@@ -64,7 +64,7 @@
   cursor: pointer;
   &:hover {
     box-shadow: $boxshadow_big;
-    color: $color_light_whiteHeader;
+    color: wheat;
   }
 }
 
