--- a/src/Components/Cart_Item/CartItem.module.scss
+++ b/src/Components/Cart_Item/CartItem.module.scss
@@ -4,7 +4,7 @@
 .cart_item {
   display: flex;
   justify-content: space-between;
-  min-width: 60%;
+  min-width: 50%;
 
   padding: 10px;
   background-color: $color_light_whiteHeader;
@@ -15,16 +15,19 @@
     display: flex;
     align-items: center;
     gap: 20px;
-
-    width: 250px;
+    flex: 1;
+    min-width: 250px;
 
     &_title {
       display: flex;
       flex-direction: column;
 
-      width: 100%;
+      min-width: 100px;
       span {
         margin-bottom: 10px;
+        background-color: $color_darken_orange;
+        text-align: center;
+        border-radius: 10px;
       }
       .discount {
         font-size: 14px;
@@ -63,7 +66,9 @@
       color: $color_darken_red;
     }
   }
-
+  @media only screen and (max-width: 980px) {
+    min-width: 80%;
+  }
   @media only screen and (max-width: 680px) {
     flex-direction: column;
     min-width: 95%;
