--- a/src/Components/IMG/IMG.module.scss
+++ b/src/Components/IMG/IMG.module.scss
@@ -14,17 +14,26 @@
   }
 }
 .hint {
+  opacity: 0;
+
   position: absolute;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   top: 0;
   bottom: 0;
   left: 0;
   right: 0;
+
   background-color: rgba(0, 0, 0, 0.6);
-  color: $color_light_whiteHeader;
+  color: wheat;
+  font-size: 14px;
   font-style: italic;
-  justify-content: center;
-  align-items: center;
-  display: none;
+  font-weight: bold;
+  letter-spacing: 1px;
+
+  transition: all 0.2s ease-in;
   cursor: pointer;
 }
 .mid {
@@ -34,7 +43,7 @@
   overflow: hidden;
   box-shadow: $boxshadow_big;
   &:hover .hint {
-    display: flex;
+    opacity: 1;
   }
   img {
     min-width: 100%;
