--- a/src/Components/Paggination/Paggination.module.scss
+++ b/src/Components/Paggination/Paggination.module.scss
@@ -52,7 +52,7 @@
   &_item_active {
     @include paggination;
     background-color: $color_darken_brown;
-    color: $color_light_whiteHeader;
+    color: wheat;
   }
   @media only screen and (max-width: 690px) {
     max-width: rem(300);
