--- a/src/Components/Sizes/Sizes.module.scss
+++ b/src/Components/Sizes/Sizes.module.scss
@@ -3,12 +3,15 @@
 
 .sizes {
   display: flex;
+  align-items: flex-end;
   gap: 5px;
+  height: rem(80);
+  margin-top: 10px;
 }
 .size {
   position: relative;
   background-color: $color_darken_orange;
-  margin-top: 35px;
+
   height: rem(30);
   min-width: rem(85);
   line-height: rem(30);
@@ -19,42 +22,54 @@
     cursor: pointer;
   }
 }
-.actual_price {
-  font-size: 14px;
-  text-decoration: line-through;
-  color: $color_darken_red;
-  margin-right: 5px;
-}
 
 .price {
   position: absolute;
   display: flex;
-  justify-content: center;
-  align-items: center;
+  flex-direction: column;
+
   min-width: 100%;
-  height: 30px;
-  top: -130%;
+  height: 50px;
+  padding: 5px;
+  top: -200%;
 
-  font-size: 14px;
-
-  text-align: center;
-  line-height: 30px;
   background-color: $color_light_orange;
+  box-shadow: $boxshadow_big;
+  border-radius: 20px;
 
-  border-radius: 10px;
-  &_tick {
+  span {
     position: absolute;
-    bottom: -40%;
+    z-index: 1;
 
-    width: 15px;
-    height: 15px;
-    border-radius: 50%;
-    border: 3px solid $color_light_whiteHeader;
-
-    background-color: $color_darken_red;
-    transform: rotate(45deg);
+    transform: rotate(10deg);
+    right: -5px;
+    bottom: 0;
+    opacity: 0.9;
   }
 }
+.actual_price {
+  z-index: 2;
+  flex: 2;
+  text-align: center;
+
+  font-size: rem(16);
+  font-weight: bold;
+}
+.discounted_price {
+  z-index: 2;
+  position: absolute;
+  top: 45%;
+  left: 25%;
+  flex: 1;
+
+  border-radius: 50%;
+
+  font-size: 12px;
+  text-decoration: line-through;
+  color: $color_darken_red;
+  font-weight: bold;
+}
+
 .not_visible {
   display: none;
 }
