--- a/src/Components/Count/Count.module.scss
+++ b/src/Components/Count/Count.module.scss
@@ -3,8 +3,8 @@
 
 .count {
   position: absolute;
-  bottom: 5%;
-  left: 5%;
+  bottom: 0;
+  left: 10px;
   animation: cart-slide 0.3s ease-in;
 
   span {
