--- a/src/Components/CartItems_Catalog/CartItemsCatalog.module.scss
+++ b/src/Components/CartItems_Catalog/CartItemsCatalog.module.scss
@@ -9,9 +9,9 @@
   gap: 10px;
   flex: 1 0 auto;
   width: 100%;
-
+  height: 100%;
   h2 {
-    margin: 10px auto;
+    margin-top: 10px;
   }
 
   &_container {
@@ -21,6 +21,17 @@
     flex: 1 0 auto;
     gap: 15px;
     width: 100%;
+    height: 55vh;
+    background-color: $color_light_orange;
+    padding: 20px 0;
+    box-shadow: $boxshadow_big;
+    overflow-y: scroll;
+  }
+  .total {
+    width: 50%;
+    display: flex;
+    justify-content: center;
+    gap: 20px;
   }
   &_btns {
     width: 60%;
@@ -31,16 +42,24 @@
     gap: 20px;
   }
 
-  @media only screen and (max-width: 650px) {
+  @media only screen and (max-width: 750px) {
+    &_container {
+      height: 80vh;
+    }
+
     &_btns {
       flex-direction: column-reverse;
       justify-content: center;
       align-items: center;
     }
+    .total {
+      width: 100%;
+      display: inline-flex;
+      flex-direction: column;
+      gap: 10px;
+      span {
+        margin: 0 auto;
+      }
+    }
   }
-}
-.total {
-  margin-top: 10px;
-  display: flex;
-  flex-direction: column;
 }
