--- a/src/Components/DIshCard_Skeleton/Skeleton.module.scss
+++ b/src/Components/DIshCard_Skeleton/Skeleton.module.scss
@@ -1,7 +1,7 @@
 @import "../../Style/variables.scss";
 @import "../../Style/mixins.scss";
 
-.dish_card_skeleton {
+.dishCard_skeleton_mid {
   min-width: 280px;
   height: 400px;
   background-color: $color_light_whiteHeader;
@@ -43,13 +43,80 @@
     height: 30px;
     border-radius: 20px;
   }
+}
 
-  @keyframes skeleton-loading {
-    0% {
-      background-color: hsl(39, 20%, 60%);
+.dishCard_skeleton_big {
+  display: flex;
+  gap: 20px;
+  margin: 10px auto;
+  width: 98%;
+  height: 100%;
+  flex: 1 0 auto;
+}
+.big_left {
+  width: 36%;
+  min-height: 75vh;
+  border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+
+  &_item_1 {
+    width: 100%;
+    height: 350px;
+    animation: skeleton-loading 1s linear infinite alternate;
+    border-radius: 10px;
+  }
+  &_item_2 {
+    width: 100%;
+    flex: 1 0 auto;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    padding: 20px;
+    justify-content: space-around;
+
+    &_btns {
+      border-radius: 20px;
+      align-self: flex-end;
+      width: 150px;
+      height: 40px;
+      animation: skeleton-loading 1s linear infinite alternate;
     }
-    100% {
-      background-color: hsl(39, 20%, 90%);
-    }
+  }
+}
+.big_right {
+  width: 64%;
+  height: 85vh;
+  border-radius: 10px;
+  background-color: white;
+  padding: 10px;
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
+
+  &_item {
+    width: 99%;
+    height: 40px;
+    animation: skeleton-loading 1s linear infinite alternate;
+    border-radius: 20px;
+  }
+  &_item_bot {
+    width: 99%;
+    height: 400px;
+
+    border-radius: 20px;
+    margin-top: 40px;
+    animation: skeleton-loading 1s linear infinite alternate;
+  }
+}
+
+@keyframes skeleton-loading {
+  0% {
+    background-color: hsl(39, 20%, 60%);
+  }
+  100% {
+    background-color: hsl(39, 20%, 90%);
   }
 }
