--- a/src/Components/DishCards_Catalog/DishCardsCatalog.module.scss
+++ b/src/Components/DishCards_Catalog/DishCardsCatalog.module.scss
@@ -2,14 +2,11 @@
 @import "../../Style/mixins.scss";
 
 .dishCards {
+  margin-top: 20px;
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
-
-  h2 {
-    margin: 20px 0;
-  }
 }
 .dishCards_container {
   padding: 0 30px;
