--- a/src/Components/Cart_Item/CartItem.module.scss
+++ b/src/Components/Cart_Item/CartItem.module.scss
@@ -16,7 +16,7 @@
     display: flex;
     align-items: center;
     gap: 20px;
-    flex: 1;
+
     min-width: 250px;
 
     &_title {
@@ -43,6 +43,7 @@
     justify-content: flex-end;
     align-items: center;
     gap: 20px;
+    margin-top: 10px;
 
     strong {
       text-align: center;
@@ -52,14 +53,28 @@
   .cart_item_specialOreder {
     position: relative;
     min-width: 150px;
-    margin: 5px;
-    padding: 5px;
+
     display: flex;
     flex-direction: column;
     align-items: center;
     gap: 5px;
 
     font-weight: bold;
+  }
+  .cart_item_specialOreder_title {
+    display: flex;
+    align-items: center;
+    gap: 5px;
+
+    div {
+      cursor: default;
+    }
+
+    svg {
+      height: 20px;
+      fill: $color_darken_orange;
+      cursor: default;
+    }
   }
   .specialOrder_header {
     display: flex;
@@ -105,6 +120,12 @@
       width: 95%;
       justify-content: center;
       align-items: center;
+    }
+  }
+  @media only screen and (max-width: 500px) {
+    .cart_item_specialOreder {
+      width: 100%;
+      align-self: center;
     }
   }
 }
