--- a/src/Components/Checkout/Checkout.module.scss
+++ b/src/Components/Checkout/Checkout.module.scss
@@ -37,6 +37,48 @@
     }
   }
 }
+.toast {
+  position: fixed;
+  right: -250px;
+  top: 20%;
+  width: 250px;
+  height: 40px;
+  padding-left: 20px;
+
+  color: $color_darken_red;
+
+  font-weight: bold;
+
+  border-left: 10px solid $color_darken_red;
+  border-radius: 0 20px 20px 0;
+  background-color: rgba($color: $color_light_red, $alpha: 0.7);
+  box-shadow: $boxshadow_big;
+
+  animation: toast-fadein 1s ease;
+
+  display: flex;
+  align-items: center;
+  gap: 10px;
+  svg {
+    fill: $color_darken_red;
+  }
+
+  @keyframes toast-fadein {
+    0% {
+      transform: translateX(0px);
+    }
+    30% {
+      transform: translateX(-280px);
+    }
+    80% {
+      transform: translateX(-280px);
+    }
+    100% {
+      transform: translateX(0px);
+    }
+  }
+}
+
 .content {
   min-width: 50%;
   min-height: 50%;
@@ -66,14 +108,16 @@
     font-style: italic;
   }
 
-  p {
-    position: absolute;
-    top: 10px;
-    right: 20px;
-  }
   ul {
     display: none;
     margin-bottom: 10px;
+  }
+  label {
+    div {
+      position: absolute;
+      top: 10px;
+      right: 20px;
+    }
   }
 
   input[type="checkbox"] {
@@ -159,6 +203,9 @@
     span {
       width: 150px;
     }
+  }
+  .content {
+    width: 100%;
   }
   .btns {
     flex-direction: column-reverse;
