--- a/src/Components/ScrollTop/ScrollTop.module.scss
+++ b/src/Components/ScrollTop/ScrollTop.module.scss
@@ -10,11 +10,13 @@
   }
   @keyframes showUP {
     0% {
-      transform: translatex(40%);
+      transform: scale(0);
+      transform: rotate(-45deg);
     }
 
     100% {
-      transform: translatex(0%);
+      transform: scale(1);
+      transform: rotate(-45deg);
     }
   }
 
