--- a/src/Style/variables.scss
+++ b/src/Style/variables.scss
@@ -15,6 +15,8 @@ $color_modal: rgba(
   $color: #bc7503,
   $alpha: 0.5,
 );
+$color_darken_green: rgb(1, 136, 1);
+$color_light_green: lighten($color_darken_green, 30);
 
 //=====FONTS
 $font_large: rem(20);
