--- a/src/Components/Reviews/Reviews.module.scss
+++ b/src/Components/Reviews/Reviews.module.scss
@@ -29,6 +29,7 @@
   }
 
   &_single {
+    position: relative;
     display: flex;
     justify-content: flex-start;
     align-items: center;
@@ -38,11 +39,93 @@
     font-size: rem(14);
     font-style: italic;
 
+    input {
+      background-color: $color_light_orange;
+      width: 100%;
+      height: 30px;
+      padding: 10px 20px;
+      padding-right: 40px;
+      border-radius: 20px;
+      margin: 10px 0px;
+      font-style: italic;
+      &:focus {
+        border: 1px solid $color_darken_brown;
+        box-shadow: $boxshadow_big;
+      }
+    }
+    .submitEdit {
+      position: absolute;
+      right: 10px;
+      top: 30px;
+      div {
+        padding: 0;
+        width: 25px;
+        height: 25px;
+        fill: $color_darken_green;
+      }
+    }
+
+    .commenter {
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      gap: 5px;
+      width: 80px;
+    }
+
     &_comment {
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: flex-start;
+
+      span {
+        margin-top: 5px;
+      }
+    }
+    .timestamp {
+      position: absolute;
+      height: 20px;
+      width: 60px;
+      top: 5px;
+      right: 55px;
+      font-size: rem(10);
+      line-height: 20px;
+      font-weight: bold;
+      text-align: center;
+      background-color: $color_light_orange;
+      border-radius: 10px;
+
+      div {
+        position: absolute;
+        height: 25px;
+        width: 25px;
+        right: -50px;
+        top: -5px;
+        &:hover {
+          background-color: $color_light_orange;
+          transform: scale(1.2);
+        }
+      }
+
+      svg {
+        height: 20px;
+        width: 20px;
+      }
+
+      span {
+        position: absolute;
+
+        right: 10px;
+        div {
+          height: 25px;
+          width: 25px;
+          margin-right: 10px;
+          svg {
+            transform: scale(0.8);
+          }
+        }
+      }
     }
   }
 }
