Implemented Slider, modified Review section

--- a/src/Components/Rating/Rating.module.scss
+++ b/src/Components/Rating/Rating.module.scss
@@ -24,7 +24,8 @@
   position: relative;
   display: flex;
   justify-content: flex-start;
-  align-items: center;
+  align-items: flex-end;
+  height: 15px;
   gap: 5px;
   svg {
     height: rem(10);
