--- a/src/Components/NotificationToast/NotificationToast.module.scss
+++ b/src/Components/NotificationToast/NotificationToast.module.scss
@@ -1,8 +1,21 @@
 @import "../../Style/mixins.scss";
 @import "../../Style/variables.scss";
 
-.toast {
+.toast_container {
   position: fixed;
+  right: -250px;
+  top: 30%;
+  width: 250px;
+  min-height: 40px;
+  padding: 5px;
+  z-index: 20;
+
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.toast {
   right: -250px;
   top: 20%;
   width: 250px;
@@ -11,20 +24,20 @@
   z-index: 20;
 
   color: $color_darken_green;
-
   font-weight: bold;
 
   border-left: 10px solid $color_darken_green;
   border-radius: 5px 20px 20px 5px;
   background-color: rgba($color: $color_light_green, $alpha: 0.8);
 
-  animation: toast-fadein 1s ease;
+  animation: toast-fadein 2s ease;
 
   display: flex;
   align-items: center;
   gap: 10px;
   svg {
     fill: $color_darken_green;
+    animation: toast-svg 1s ease-in-out;
   }
 
   @keyframes toast-fadein {
@@ -39,6 +52,26 @@
     }
     100% {
       transform: translateX(0px);
+    }
+  }
+  @keyframes toast-svg {
+    0% {
+      transform: scale(0);
+    }
+    30% {
+      transform: scale(0);
+    }
+    75% {
+      transform: scale(1.5);
+    }
+    80% {
+      transform: scale(1.5);
+    }
+    90% {
+      transform: scale(1);
+    }
+    100% {
+      transform: scale(1);
     }
   }
 }
