--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -16,6 +16,7 @@
   min-width: 100%;
   height: 100%;
   position: relative;
+  transition: transform ease-out 0.8s;
 
   img {
     min-width: 100%;
@@ -60,6 +61,17 @@
   svg {
     height: 20px;
     fill: $color_darken_brown;
+  }
+  &_dis {
+    opacity: 0.5;
+    margin-right: 20px;
+    transform: rotate(180deg);
+    z-index: 10;
+    svg {
+      cursor: default;
+      height: 20px;
+      fill: grey;
+    }
   }
 }
 .next {
