--- a/src/Components/Dropdown/Dropdown.module.scss
+++ b/src/Components/Dropdown/Dropdown.module.scss
@@ -7,7 +7,9 @@
   right: 20px;
 
   min-width: rem(200);
-  font-size: rem(16);
+  font-size: 0px;
+  list-style: none;
+
   border-radius: 10px;
 
   display: flex;
@@ -20,29 +22,32 @@
   z-index: 10;
 
   li {
-    height: rem(40);
-    line-height: rem(40);
-    padding-left: 20px;
+    min-width: 100%;
     display: flex;
     align-items: center;
-
+    gap: 20px;
     flex: 1 0;
+    font-size: rem(16);
+    line-height: rem(40);
+    padding-left: 20px;
 
     background-color: $color_light_orange;
     color: $color_darken_brown;
     svg {
       width: rem(30);
       height: rem(30);
-      margin-right: 20px;
       fill: $color_darken_brown;
     }
 
     &:hover {
       cursor: pointer;
       background-color: $color_darken_orange;
-      svg {
-        opacity: 1;
-      }
     }
+  }
+}
+
+@media screen and (max-width: 630px) {
+  .root {
+    right: -10px;
   }
 }
