--- a/src/Components/RecentOrders/RecentOrders.module.scss
+++ b/src/Components/RecentOrders/RecentOrders.module.scss
@@ -7,7 +7,7 @@
     text-align: center;
   }
   table {
-    margin: 0 auto;
+    margin: 0px auto 10px;
     text-align: left;
     width: 98%;
     background-color: $color_light_orange;
@@ -72,8 +72,7 @@
     font-size: rem(14);
     border-bottom: 1px dashed $color_darken_red;
 
-    span {
-      font-size: rem(12);
+    small {
       font-weight: bold;
       color: $color_darken_red;
       text-decoration: line-through;
