--- a/src/Components/SingleProduct/SingleProduct.module.scss
+++ b/src/Components/SingleProduct/SingleProduct.module.scss
@@ -18,9 +18,11 @@
 .informers {
   position: absolute;
   top: 10px;
-  right: 120px;
+  right: 100px;
+
   display: flex;
   gap: 10px;
+  padding-left: 80px;
 }
 .product_left {
   width: 500px;
@@ -62,7 +64,7 @@
     }
   }
 }
-@media only screen and (max-width: 400px) {
+@media only screen and (max-width: 500px) {
   .informers {
     position: relative;
     top: 0;
