--- a/src/Components/Checkout/Checkout.module.scss
+++ b/src/Components/Checkout/Checkout.module.scss
@@ -154,7 +154,7 @@
   gap: 20px;
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 610px) {
   .payment {
     flex-direction: column;
     gap: 10px;
@@ -169,5 +169,20 @@
   .btns {
     flex-direction: column-reverse;
     align-items: center;
+  }
+  .pre_order {
+    width: 50%;
+  }
+  .pre_order_time {
+    flex-wrap: wrap;
+  }
+}
+@media only screen and (max-width: 400px) {
+  .pre_order {
+    width: 100%;
+  }
+  .pre_order_time {
+    width: 100%;
+    flex-wrap: wrap;
   }
 }
