--- a/src/Components/SingleProduct/SingleProduct.module.scss
+++ b/src/Components/SingleProduct/SingleProduct.module.scss
@@ -19,10 +19,10 @@
   position: absolute;
   top: 10px;
   right: 100px;
+  padding-right: 60px;
 
   display: flex;
   gap: 10px;
-  padding-left: 80px;
 }
 .product_left {
   width: 500px;
