--- a/src/Components/PreOrder/PreOrder.module.scss
+++ b/src/Components/PreOrder/PreOrder.module.scss
@@ -10,7 +10,7 @@
   gap: 5px;
   min-height: 40px;
 
-  b {
+  h4 {
     margin-left: 20px;
   }
 }
@@ -55,6 +55,7 @@
 }
 .pre_order_time {
   display: flex;
+
   gap: 5px;
 }
 @media only screen and (max-width: 610px) {
