--- a/src/Components/Cart_Item/CartItem.module.scss
+++ b/src/Components/Cart_Item/CartItem.module.scss
@@ -71,8 +71,7 @@
     }
 
     svg {
-      height: 20px;
-      fill: $color_darken_orange;
+      fill: $color_darken_red;
       cursor: default;
     }
   }
