--- a/src/Components/Search/Search.module.scss
+++ b/src/Components/Search/Search.module.scss
@@ -10,10 +10,6 @@
   margin: 5px;
   height: 50px;
 
-  span {
-    position: absolute;
-    right: 10%;
-  }
   .input {
     height: 40px;
     width: 200px;
@@ -23,5 +19,10 @@
     background-color: $color_light_orange;
     border: 1px solid $color_darken_brown;
     color: $color_darken_brown;
+  }
+
+  & div:nth-child(3) {
+    position: absolute;
+    right: 10%;
   }
 }
