--- a/src/Pages/Settings.module.scss
+++ b/src/Pages/Settings.module.scss
@@ -128,3 +128,168 @@
   display: flex;
   flex-direction: column;
 }
+
+.favourites_item {
+  position: relative;
+  width: 300px;
+  min-height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+
+  background-color: $color_light_orange;
+
+  border-radius: 20px;
+  box-shadow: $boxshadow_big;
+  padding-bottom: 20px;
+
+  & div:nth-child(1) {
+    height: 200px;
+    width: 200px;
+    border-radius: 50%;
+    position: relative;
+    left: -25%;
+    top: -10%;
+
+    box-shadow: $boxshadow_big;
+    img {
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+      object-position: 50% 80%;
+    }
+  }
+  & div:last-child {
+    min-width: 50%;
+    min-height: 50%;
+    display: flex;
+    flex-direction: column;
+
+    position: absolute;
+    top: -30px;
+    right: 0;
+    & div:nth-child(1) {
+      opacity: 0;
+      border: 1px solid $color_darken_red;
+      background-color: $color_light_red;
+      margin-top: 20px;
+      // margin-left: 60px;
+      width: 50px;
+      height: 50px;
+      fill: $color_darken_red;
+      svg {
+        animation: favourite-pulse 1s ease-in-out infinite;
+      }
+    }
+    & button:nth-child(2) {
+      opacity: 0;
+      margin-top: 20px;
+      //margin-left: 50px;
+      width: 70px;
+      height: 70px;
+      border-radius: 50%;
+    }
+    & button:nth-child(3) {
+      opacity: 0;
+      margin-top: 20px;
+      //margin-left: 15px;
+      width: 35px;
+      height: 35px;
+      border-radius: 50%;
+    }
+  }
+  &:hover {
+    transform: scale(1.1);
+    z-index: 10;
+
+    & div:last-child {
+      min-width: 50%;
+      min-height: 50%;
+      display: flex;
+      flex-direction: column;
+
+      position: absolute;
+      top: -30px;
+      right: 0;
+      & div:nth-child(1) {
+        opacity: 1;
+        border: 1px solid $color_darken_red;
+        background-color: $color_light_red;
+        margin-top: 20px;
+        margin-left: 60px;
+        width: 50px;
+        height: 50px;
+        fill: $color_darken_red;
+        svg {
+          animation: favourite-pulse 1s ease-in-out infinite;
+        }
+      }
+      & button:nth-child(2) {
+        opacity: 1;
+        margin-top: 20px;
+        margin-left: 50px;
+        width: 70px;
+        height: 70px;
+        border-radius: 50%;
+      }
+      & button:nth-child(3) {
+        opacity: 1;
+        margin-top: 20px;
+        margin-left: 15px;
+        width: 35px;
+        height: 35px;
+        border-radius: 50%;
+      }
+    }
+  }
+}
+.special_order {
+  position: relative;
+  width: 100%;
+
+  & div:nth-child(1) {
+    position: absolute;
+    height: 80px;
+    width: 80px;
+    top: -20px;
+    left: 200px;
+    box-shadow: none;
+    fill: $color_darken_red;
+    opacity: 0.3;
+    @include informer("special order");
+  }
+  ul {
+    margin: 0 auto;
+    width: 60%;
+    display: flex;
+    gap: 10px;
+    flex-direction: column;
+  }
+  li {
+    font-size: rem(12);
+    font-style: italic;
+    font-weight: bold;
+    text-decoration: line-through;
+    color: $color_darken_red;
+  }
+}
+.favourites_container {
+  margin-top: 50px;
+  display: flex;
+  justify-content: center;
+  flex-direction: row;
+  flex-wrap: wrap;
+  gap: 50px;
+}
+@keyframes favourite-pulse {
+  0% {
+    transform: scale(1);
+  }
+  50% {
+    transform: scale(1.4);
+  }
+  100% {
+    transform: scale(1);
+  }
+}
