--- a/src/Style/mixins.scss
+++ b/src/Style/mixins.scss
@@ -184,3 +184,25 @@
   border-radius: 20px;
   background: radial-gradient($color_light_orange, $color_EX_darken_orange);
 }
+
+@mixin informer($content) {
+  &:hover {
+    &::after {
+      content: $content;
+      position: absolute;
+      bottom: -35px;
+      text-transform: uppercase;
+      font-style: italic;
+      font-size: 10px;
+      font-weight: bold;
+
+      background-color: $color_light_orange;
+      width: 100%;
+      text-align: center;
+      line-height: 1.5rem;
+      border-radius: 20px;
+      border: 1px solid $color_darken_brown;
+      z-index: 10;
+    }
+  }
+}
