--- a/src/layouts/Layouts.module.scss
+++ b/src/layouts/Layouts.module.scss
@@ -101,3 +101,51 @@
     flex-direction: column;
   }
 }
+
+.page_wrapper {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .page_header {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 20px;
+
+    margin: 10px 0px;
+  }
+
+  .list {
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    padding: 0px 10px;
+    margin-bottom: 20px;
+  }
+  .catalog {
+    margin-bottom: 20px;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(1, 1fr);
+    grid-column-gap: 30px;
+    grid-row-gap: 30px;
+
+    margin-bottom: 10px;
+
+    @media only screen and (max-width: 1350px) {
+      grid-template-columns: repeat(3, 1fr);
+      padding: 0 20px;
+      grid-column-gap: auto;
+      grid-row-gap: auto;
+    }
+
+    @media only screen and (max-width: 1150px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media only screen and (max-width: 680px) {
+      grid-template-columns: repeat(1, 1fr);
+    }
+  }
+}
