--- a/src/Components/Sort/Sort.module.scss
+++ b/src/Components/Sort/Sort.module.scss
@@ -12,7 +12,7 @@
   gap: 20px;
   fill: $color_darken_brown;
 
-  strong {
+  b {
     color: $color_darken_brown;
     text-transform: uppercase;
     font-weight: bold;
