--- a/src/Components/Cart_Item/CartItem.module.scss
+++ b/src/Components/Cart_Item/CartItem.module.scss
@@ -38,14 +38,14 @@
     }
   }
 
-  &_setting {
+  &_buttons {
     display: flex;
     justify-content: flex-end;
     align-items: center;
     gap: 20px;
     margin-top: 10px;
 
-    strong {
+    b {
       text-align: center;
       min-width: 20px;
     }
@@ -115,7 +115,7 @@
   @media only screen and (max-width: 680px) {
     flex-wrap: wrap;
 
-    &_setting {
+    &_buttons {
       width: 95%;
       justify-content: center;
       align-items: center;
