--- a/src/Components/PreOrder/PreOrder.module.scss
+++ b/src/Components/PreOrder/PreOrder.module.scss
@@ -9,17 +9,17 @@
   flex-wrap: wrap;
   gap: 5px;
   min-height: 40px;
+}
+.pre_order_header {
+  display: flex;
+  align-items: center;
+  gap: 10px;
 
   h4 {
     margin-left: 20px;
   }
 }
-.pre_order_section {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-.conf {
+.pre_order_confirmation {
   padding: 0px 20px;
   color: $color_darken_red;
   font-weight: bold;
@@ -55,8 +55,16 @@
 }
 .pre_order_time {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 
-  gap: 5px;
+  gap: 10px;
+
+  .pre_order_day {
+    display: flex;
+    gap: 20px;
+    margin-left: 10px;
+  }
 }
 @media only screen and (max-width: 610px) {
   .pre_order {
