--- a/src/Components/Slider/Slider.module.scss
+++ b/src/Components/Slider/Slider.module.scss
@@ -55,6 +55,7 @@
 }
 
 .prev {
+  background-color: transparent;
   margin-right: 20px;
   transform: rotate(180deg);
   z-index: 10;
@@ -62,7 +63,8 @@
     height: 20px;
     fill: $color_darken_brown;
   }
-  &_dis {
+  &_disabled {
+    background-color: transparent;
     opacity: 0.5;
     margin-right: 20px;
     transform: rotate(180deg);
@@ -75,6 +77,7 @@
   }
 }
 .next {
+  background-color: transparent;
   margin-left: 20px;
   svg {
     height: 20px;
